Code clean up
Also improves error message when failing to get data for a player